Lots of things I'm bad at pushing

--- a/client/session.html
+++ b/client/session.html
@@ -1,6 +1,6 @@
 <head>
     <link href="/assets/templates/character-sheet-session.css" rel="stylesheet" type="text/css" media="all">
-    <script type="text/javascript" src="/scripts/run-character.js" defer></script>
+    <script type="text/javascript" src="/scripts/session-character.js" defer></script>
     <script type="text/javascript" src="session.js" defer></script>
 </head>
 
