Add description to index

--- a/client/index.html
+++ b/client/index.html
@@ -2,4 +2,12 @@
 </head>
 
 <body>
+    <div class="box">
+        Hello! My name is Alayna, welcome to my website!<br>
+        This site is currently a work-in-progress version of an interface for a roguelike campaign I am
+        working on. Eventually, I will make this project a subdomain and have a more generalized personal website here.
+        But for now, this is easy.<br><br>
+        This website is not, nor will it likely ever be designed for viewing on mobile. Please use a computer for the
+        optimal experience.
+    </div>
 </body>
