Begin session page revamp

--- a/client/session.html
+++ b/client/session.html
@@ -5,5 +5,8 @@
 </head>
 
 <body>
-    <div class="content" id="characters"></div>
+    <div class="content">
+        <div class="hud" id="hud"></div>
+        <div id="characters"></div>
+    </div>
 </body>
